# integrity-checker

./: .gitignore  .travis.yml  Cargo.toml  FORMAT.md  README.md  appveyor.yml  test.sh
.github/workflows/: main.yml
benches/: build.rs
schema/: checksum.json  database.json
src/: base64.rs  database.rs  error.rs  lib.rs  main.rs
tests/: check.rs  diff.rs  validate.rs
tests/changes_edit/after/: zxcv.txt
tests/changes_edit_no_size_change/after/: zxcv.txt
tests/changes_new/after/: new.txt
tests/changes_new_bin/after/: greek.txt
tests/suspicious_nonascii/after/: asdf.txt
