[package]
name = "integrity-checker"
version = "0.1.0"
authors = ["Elliott Slaughter <elliottslaughter@gmail.com>"]
description = "integrity checker for backups and filesystems"
documentation = "https://github.com/elliottslaughter/integrity-checker"
homepage = "https://github.com/elliottslaughter/integrity-checker"
repository = "https://github.com/elliottslaughter/integrity-checker"
readme = "README.md"
keywords = ["backup", "integrity"]
categories = ["command-line-utilities", "filesystem"]
license = "Apache-2.0"

[badges]
appveyor = { repository = "elliottslaughter/integrity-checker" }
travis = { repository = "elliottslaughter/integrity-checker" }

[features]
default = ["asm"]

asm = ["sha2/asm"]

[dependencies]
clap = "2.30"
ignore = "0.4"
time = "0.1"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.9"

flate2 = "1.0"

digest = "0.7"
sha2 = "0.7"
blake2 = "0.7"

[dev-dependencies]
criterion = "0.2"
num_cpus = "1"
tempfile = "3"
valico = "2"

[[bin]]
name = "ick"
path = "src/main.rs"
bench = false

[[bench]]
name = "build"
harness = false
