[package]
name = "integrity-checker"
version = "0.2.1"
authors = ["Elliott Slaughter <elliottslaughter@gmail.com>"]
description = "integrity checker for backups and filesystems"
documentation = "https://github.com/elliottslaughter/integrity-checker"
homepage = "https://github.com/elliottslaughter/integrity-checker"
repository = "https://github.com/elliottslaughter/integrity-checker"
readme = "README.md"
keywords = ["backup", "integrity"]
categories = ["command-line-utilities", "filesystem"]
license = "Apache-2.0"

include = ["Cargo.lock", "Cargo.toml", "FORMAT.md", "LICENSE.txt", "README.md", "benches/**/*.rs", "examples/**/*.rs", "src/**/*.rs", "tests/**/*.rs", "schema/*.json"]

edition = "2018"

[features]
default = []

asm = ["sha2/asm"]

[dependencies]
clap = "2.33"
ignore = "0.4"
time = "0.3"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.20"

flate2 = "1.0"

digest = "0.10"
sha2 = "0.10"
blake2 = "0.10"

[dev-dependencies]
criterion = "0.3"
num_cpus = "1"
tempfile = "3"
valico = "3"

[[bin]]
name = "ick"
path = "src/main.rs"
bench = false

[[bench]]
name = "build"
harness = false
